--- a/misc/folder.html
+++ b/misc/folder.html
@@ -67,17 +67,11 @@
     </details>
 
     <details class="folder">
-        <summary><a>nameless zine</a></summary>
-        Refer to <a href="journal#zine">journal entry</a>.
+        <summary><a>html/css experiments</a></summary>
         <ul>
-            <li><a href="folder/zine/0">number 0</a></li>
-        </ul>
-    </details>
-
-    <details class="folder">
-        <summary><a>miscellaneous pages</a></summary>
-        <ul>
+            <li><a href="folder/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
             <li><a href="folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
+            <li><a href="folder/test/test.html">Material 3 index</a>: a remake of the homepage (somewhat) in Google's current design language.</li>
             <li><a href="folder/hi">hi</a>: hi</li>
             <li><a href="folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
         </ul>
