--- a/misc/folder/test/test.html
+++ b/misc/folder/test/test.html
@@ -41,9 +41,9 @@
                 <a href="/website/buttons"><span class="material-symbols-outlined">
                     web
                     </span>buttons</a>
-                <a href="/website/sitelog"><span class="material-symbols-outlined">
+                <a href="sitelog"><span class="material-symbols-outlined">
                     overview
-                    </span>sitelog</a>
+                    </span>sitelog</a> (desktop only)
             </div>
         </div>
     </body>
