--- a/misc/folder.html
+++ b/misc/folder.html
@@ -71,7 +71,7 @@
         <ul>
             <li><a href="folder/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
             <li><a href="folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
-            <li><a href="folder/test/test.html">Material 3 index</a>: a remake of a couple pages (somewhat) remade ßin Google's current design language.</li>
+            <li><a href="folder/test/test.html">Material 3 index</a>: a remake of a couple pages (somewhat) remade in Google's current design language.</li>
             <li><a href="folder/hi">hi</a>: hi</li>
             <li><a href="folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
         </ul>
