--- a/misc/folder/test/test.html
+++ b/misc/folder/test/test.html
@@ -43,7 +43,7 @@
                     </span>buttons</a>
                 <a href="sitelog"><span class="material-symbols-outlined">
                     overview
-                    </span>sitelog</a> (desktop only)
+                    </span>sitelog (desktop only)</a>
             </div>
         </div>
     </body>
