updated natalie's site link

--- a/words/nothing/starting.html
+++ b/words/nothing/starting.html
@@ -39,7 +39,7 @@
     <br>some times the legibility has taken a back stand to looks but, overall accessibility is one of the main goals of this site.
 <br>
     <br>the moment it hit me straight in the head was mobile compatibility and responsive layouts.
-    <br>very very big thanks to <a href="https://razor0.repl.co/">natalie</a> for teaching many things about this, but before i didn't know the @media rule, em units, min() and max() and many other things that i'm probably forgetting.
+    <br>very very big thanks to <a href="https://ctrl-c.club/~nat/">natalie</a> for teaching many things about this, but before i didn't know the @media rule, em units, min() and max() and many other things that i'm probably forgetting.
     <br>probably because the way i learned CSS and HTML was just looking up videos and documentation and basically brute force.
     <br>i guess i just like figuring out and doing things myself.
     <br>if it worked, it was good enough, good coding practices be damned.
