changed discord links

--- a/websites.html
+++ b/websites.html
@@ -46,7 +46,7 @@
         <h2>→ <a href="websites/geo">geography and flags (4)</a></h2>
         <h2>→ <a href="websites/misc">miscellaneously interesting (11)</a></h2>
 
-        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> or <a href="mailto:cvni1981@gmail.com">email</a>!</p>
+        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="mailto:cvni1981@gmail.com">email</a>!</p>
         </div>
     </body>
 </html>
