--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                 <span style="color: #303030">█</span><span style="color: #8060f0">█</span><span style="color: #ffffff">█</span><span style="color: #f0e060">█</span>
                 Gender's very weird for me<br>
                 Also my mental health isn't doing very good at the moment :3<br>
-                For contact: discord (@cvni81#4837) or email (ew) (cvni1981@gmail.com)</p>
+                For contact: <s>discord (@cvni81#4837)</s> (taking a break) or email (cvni1981@gmail.com)</p>
         
         </div>
     </body>
