--- a/misc/folder/test/test.html
+++ b/misc/folder/test/test.html
@@ -16,7 +16,7 @@
                 I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.
                 Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it.
                 Feel free to look around and explore, however small this site may be.
-                Material Icons used under the <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License version 2</a>.</p>
+                Material Icons used under the <a href="https://www.apache.org/licenses/LICENSE-2.0.txt" style="text-decoration: underline">Apache License version 2</a>.</p>
             <div class="list">
                 <a href="/website/about"><span class="material-symbols-outlined">
                     question_mark
