added license stuffs

--- a/misc/folder/index2.html
+++ b/misc/folder/index2.html
@@ -7,16 +7,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,700&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="style2.css" rel="stylesheet" type="text/css" media="all"><style>
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: normal;
-            src: url("/website/styles/Vera.ttf")}
-
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: bold;
-            src: url("/website/styles/Verab.ttf")}
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
@@ -24,7 +18,7 @@
             .misc{color: #f0f0f0;
             font-family: 'Space Grotesk', sans-serif;}
             .websites{color: #f0f0f0;
-            font-family: 'Vera Humana 95', sans-serif;}
+            font-family: 'Marmelad', sans-serif;}
             .words{color: #f0f0f0;
             font-family: 'Atkinson Hyperlegible', sans-serif}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
