--- a/websites/misc.html
+++ b/websites/misc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet"> 
         <title>websites: miscellaneous</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
