--- a/sitelog.html
+++ b/sitelog.html
@@ -62,7 +62,11 @@
         i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
         in existence since july 2022<br>
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
-        <br>and that's it! enjoy the sitelog ig</p></details>
+        <br><details>
+            <summary>font and icon licenses</summary>
+            Inter, Marmelad, Atkinson Hyperlegible, Literata, Space Grotesk, IBM Plex Mono, Work Sans, Fira Sans, Archivo, Libre Baskerville and Crimson Pro are under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.<br>
+            Material Icons are under the <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache License Version 2</a>.
+        </details></details>
     <div id="entry">
         <h2>14/3/2023 15:48</h2>
         <p>I added the sidebar back to (most) of the pages!</p> 
