clarified a license thing

--- a/blender.html
+++ b/blender.html
@@ -49,7 +49,7 @@
 
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. (i should make colorful things more often...) These are a bunch of them.
             Sorry if it takes a while to load it all-
-            <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="/website/LICENSE.txt" >GPLv3</a>.
+            <br>btw, all the images/gifs (and this site) are licensed under <a href="/website/LICENSE.txt" >GPLv3</a>.
         </p>
         <ul>
             <li><a href="blender/pyramids" class="pyramid" >pyramids (4)</a></li>
