--- a/sitelog.html
+++ b/sitelog.html
@@ -64,8 +64,8 @@
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
         <br><details>
             <summary>font and icon licenses</summary>
-            Inter, Marmelad, Atkinson Hyperlegible, Literata, Space Grotesk, IBM Plex Mono, Work Sans, Fira Sans, Archivo, Libre Baskerville and Crimson Pro are under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.<br>
-            Material Icons are under the <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache License Version 2</a>.
+            Inter, Marmelad, Atkinson Hyperlegible, Literata, Space Grotesk, IBM Plex Mono, Work Sans, Fira Sans, Archivo, Libre Baskerville and Crimson Pro are licensed under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.
+            Material Icons are licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache License Version 2</a>.
         </details></details>
     <div id="entry">
         <h2>14/3/2023 15:48</h2>
