--- a/sitelog.html
+++ b/sitelog.html
@@ -64,7 +64,7 @@
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
         <br><details>
             <summary>font and icon licenses</summary>
-            Inter, Marmelad, Atkinson Hyperlegible, Literata, Space Grotesk, IBM Plex Mono, Work Sans, Fira Sans, Archivo, Libre Baskerville and Crimson Pro are licensed under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.
+            Inter, Marmelad, Atkinson Hyperlegible, Literata, Space Grotesk, IBM Plex Mono, Work Sans, Fira Sans, Archivo, Libre Baskerville, Crimson Pro and Azeret Mono are licensed under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.
             Material Icons are licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache License Version 2</a>.
         </details></details>
     <div id="entry">
