--- a/sitelog.html
+++ b/sitelog.html
@@ -68,6 +68,9 @@
             Material Icons are licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0.html">Apache License Version 2</a>.
         </details></details>
     <div id="entry">
+        <h2>18/3/2023 22:06</h2>
+        <p>Changed the homepage back to the sidebar design and put <a href="misc/folder/index4">the old one</a> in the folder. Also added license info for the icons and fonts (in the "more about the site" dropdown)</p> 
+    </div><div id="entry">
         <h2>14/3/2023 15:48</h2>
         <p>I added the sidebar back to (most) of the pages!</p> 
     </div><div id="entry">
