added an phrase

--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -49,6 +49,7 @@
         <div id="notes">
             <div>What do i know</div>
             <div>I wonder if anyone's ever come down here</div>
+            <div>You should have. But you didn't.</div>
             <div>Why do songs keep getting stuck in my head...</div>
             <div>Hate only brings you hate.</div>
             <div>This site is driving me nuts</div>
