--- a/misc.html
+++ b/misc.html
@@ -35,8 +35,10 @@
             
         <h1 style="font-size: 3rem">misc</h1>
     
-        <details class="navbar">
-            <summary><a href="/website/home">home</a></summary>
+        <div class="navbar">
+        <a href="/website/home">home</a> 
+        <details>
+            <summary><a>(more)</a></summary>
             <a href="about">about</a> . 
             <a href="musicians">musicians</a> . 
             <a href="websites">websites</a><br>
@@ -47,6 +49,7 @@
             <a href="buttons">buttons</a> . 
             <a href="sitelog">sitelog</a>
         </details>
+        </div>
 
         <p>After going down the stairs and into the basement, you wander into a green door.
             <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
