--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Work-Sans:wght@400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>oops</title></head>
+        <title>oops</title><style>body{font-family: 'Work Sans', sans-serif;}</style></head>
 
     <body>
 
