--- a/404.html
+++ b/404.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">  
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work-Sans:wght@400;800&amp;display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>(?)</title>
     <style>
         body{background-color: #080808; color: #f0f0f0;
-        font-family: 'Inter', sans-serif}
+        font-family: 'Work Sans', sans-serif}
         a{color: #f0f0f0; font-weight: bold}
         a:hover{background-color: #f0f0f0; text-decoration-color: #f0f0f0; color: #080808}
         .this-container{
