--- a/h.html
+++ b/h.html
@@ -16,17 +16,12 @@
             a.websites:hover{background-color: #201868;
             text-decoration-color: #f2cf68; color: #f2cf68}
 
-            h1{text-decoration: underline; text-decoration-thickness: min(5px, 1vw)}
-
             .info{padding: 16px 24px;
             width: 400px}
-            .summary{padding: 16px 24px;
-            margin: auto; width: 360px}
+            .summary{padding: 16px 24px; width: 360px}
 
             @media only screen and (max-width: 800px) {
-                body{background-color: #d4d4d4}
-                .page{width: min(calc(100vw - 64px), 35rem); 
-                    background-color: #f0f0f0; 
+                body{margin: min(calc(100vw - 64px), 35rem); 
                     display: block;
                     padding: 16px;
                     margin: 0 auto;
