--- a/h.html
+++ b/h.html
@@ -18,7 +18,7 @@
 
             .info{padding: 16px 24px;
             width: 400px}
-            .summary{padding: 16px 24px; width: 360px}
+            .summary{padding: 16px 24px; width: 360px; font-size: xx-large}
 
             @media only screen and (max-width: 800px) {
                 body{margin: min(calc(100vw - 64px), 35rem); 
@@ -28,7 +28,6 @@
                     min-height: 100vh}
                 .info{background-color: #00000000;}
                 .summary, .info{padding: 0; width: auto}
-                .summary a, .material-symbols-outlined{font-size: x-large}
             }
 
         </style></head>
