--- a/h.html
+++ b/h.html
@@ -21,7 +21,7 @@
             .summary{padding: 16px 24px; width: 360px; font-size: xx-large}
 
             @media only screen and (max-width: 800px) {
-                body{margin: min(calc(100vw - 64px), 35rem); 
+                body{width: min(calc(100vw - 64px), 35rem); 
                     display: block;
                     padding: 16px;
                     margin: 0 auto;
