--- a/h.html
+++ b/h.html
@@ -16,7 +16,7 @@
             a.websites:hover{background-color: #201868;
             text-decoration-color: #f2cf68; color: #f2cf68}
 
-            .info{padding: 16px 16px 24px;
+            .info{padding: 16px; padding-left: 24px;
             width: 400px;
             border-right: solid #a0a0a0 2px; margin-right: 12px}
             .summary{padding: 16px 24px; width: 360px; font-size: xx-large}
