--- a/h.html
+++ b/h.html
@@ -21,6 +21,7 @@
             .summary{padding: 16px 24px; width: 360px; font-size: xx-large}
 
             @media only screen and (max-width: 800px) {
+                .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px}
                 .summary, .info{padding: 0; width: auto}
             }
 
