--- a/h.html
+++ b/h.html
@@ -16,13 +16,14 @@
             a.websites:hover{background-color: #201868;
             text-decoration-color: #f2cf68; color: #f2cf68}
 
-            .info{padding: 16px; padding-left: 24px; width: 400px;
+            .info{padding: 16px; width: 400px;
             border-right: solid #a0a0a0 2px; margin-right: 12px}
-            .summary{padding: 16px 24px; width: 360px; font-size: xx-large}
+            .summary{padding: 16px 24px; margin-left: 24px; width: 360px; font-size: xx-large}
 
             @media only screen and (max-width: 800px) {
                 .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px}
                 .summary, .info{padding: 0; width: auto}
+                .summary{margin-left: 48px}
             }
 
         </style></head>
