--- a/h.html
+++ b/h.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .page{width: 100vw; display: flex; flex-direction: row;}
 
             a.buttons:hover{background-color: #7ba0cc; 
             text-decoration-color:#101010; color: #101010; }
@@ -23,6 +22,7 @@
             @media only screen and (max-width: 800px) {
                 .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px}
                 .summary, .info{padding: 0; width: auto}
+                .info{padding: 0 16px}
                 .summary{margin-left: 48px}
             }
 
