--- a/h.html
+++ b/h.html
@@ -15,7 +15,7 @@
             a.websites:hover{background-color: #201868;
             text-decoration-color: #f2cf68; color: #f2cf68}
 
-            .info{padding: 16px; padding-right: 24px; width: 400px;
+            .info{padding: 16px; padding-left: 24px; width: 400px;
             border-right: solid #a0a0a0 2px; margin-right: 12px}
             .summary{padding: 16px 24px; margin-left: 24px; width: 360px; font-size: xx-large}
 
