--- a/h.html
+++ b/h.html
@@ -6,18 +6,16 @@
         <title>nowhere in particular</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
 
-            a.buttons:hover{background-color: #7ba0cc; 
-            text-decoration-color:#101010; color: #101010; }
-            a.misc:hover{background-color: #404040;
-            text-decoration-color: #15c405; color: #15c405}
-            a.log:hover{background-color: #404040;
-            text-decoration-color: #ffa900; color: #ffa900}
-            a.websites:hover{background-color: #201868;
-            text-decoration-color: #f2cf68; color: #f2cf68}
+            a.buttons:hover{background-color: #7ba0cc; color: #101010; }
+            a.misc:hover{background-color: #404040; color: #15c405}
+            a.log:hover{background-color: #404040; color: #ffa900}
+            a.websites:hover{background-color: #201868; color: #f2cf68}
 
             .info{padding: 16px; padding-left: 24px; width: 400px;
             border-right: solid #a0a0a0 2px; margin-right: 12px}
             .summary{padding: 16px 24px; margin-left: 24px; width: 360px; font-size: xx-large}
+
+            .summary a{text-decoration: none}
 
             @media only screen and (max-width: 800px) {
                 .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px}
