removed link hover animation and other stuff

--- a/h.html
+++ b/h.html
@@ -7,8 +7,8 @@
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
 
             a.buttons:hover{background-color: #7ba0cc; color: #101010; }
-            a.misc:hover{background-color: #404040; color: #15c405}
-            a.log:hover{background-color: #404040; color: #ffa900}
+            a.misc:hover{background-color: #202020; color: #15c405}
+            a.log:hover{background-color: #202020; color: #ffa900}
             a.websites:hover{background-color: #201868; color: #f2cf68}
 
             .info{padding: 16px; padding-left: 24px; width: 400px;
@@ -19,9 +19,8 @@
 
             @media only screen and (max-width: 800px) {
                 .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px}
-                .summary, .info{padding: 0; width: auto}
-                .info{padding: 0 16px}
-                .summary{margin-left: 48px}
+                .info{padding: 0 16px; margin: 0; width: auto}
+                .summary{margin-left: 48px; padding: 0; width: auto}
             }
 
         </style></head>
