--- a/h.html
+++ b/h.html
@@ -20,7 +20,7 @@
             @media only screen and (max-width: 800px) {
                 .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px}
                 .info{padding: 0 16px; margin: 0; width: auto}
-                .summary{margin-left: 48px; padding: 0; width: auto}
+                .summary{margin-left: 48px; margin-top: 24px; padding: 0; width: auto}
             }
 
         </style></head>
