--- a/h.html
+++ b/h.html
@@ -31,7 +31,7 @@
                 <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
                 I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
                 Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it, however small this site may be.<br>
-                <span style="background-color: #f01010; color: #f0a010"><b>WARNING:</b> this site is still under some reconstruction, the styles might change and some pages may be broken over the next days!</span><br>
+                <span style="background-color: #ad0b0b; color: #f0a010">this site is under some reconstruction, the styles might change and some pages may be broken over the next days!</span><br>
                 <details><summary style="font-weight: bold">current status</summary>
                 <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
             </div>
