--- a/h.html
+++ b/h.html
@@ -23,6 +23,8 @@
                 .summary{margin-left: 48px; margin-top: 24px; padding: 0; width: auto}
             }
 
+            s{text-decoration-color: #808080;}
+
         </style></head>
 
     <body>
@@ -31,21 +33,21 @@
                 <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
                 I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
                 Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it, however small this site may be.<br>
-                <span style="background-color: #ad0b0b; color: #f0a010">this site is under some reconstruction, the styles might change and some pages may be broken over the next days!</span><br>
+                <span style="background-color: #ad0b0b; color: #f0a010">This site is under some reconstruction, the styles might change and some pages may be broken over the next days!</span><br>
                 <details><summary style="font-weight: bold">current status</summary>
                 <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
             </div>
 
             <ul class="summary">
-                <li><a href="about"     title="me and what i like to do">about</a></li>
-                <li><a href="musicians" title="good music people">musicians</a></li>
-                <li><a href="websites"  title="cool websites"       class="websites">websites</a></li>
-                <li><a href="words"     title="poems and texts and things">words</a></li>
-                <li><a href="doodles"   title="stuff i drew">doodles</a></li>
-                <li><a href="blender"   title="3d renders in blender">blender</a></li>
-                <li><a href="misc"      title="general miscellanea" class="misc">misc</a></li>
-                <li><a href="buttons"   title="other folks' sites"  class="buttons">buttons</a></li>
-                <li><a href="sitelog"   title="what's changed"      class="log">sitelog</a></li>
+                <li><a href="about"     title="me and what i like to do"            ><s>about</s></a></li>
+                <li><a href="musicians" title="good music people"                   ><s>musicians</s></a></li>
+                <li><a href="websites"  title="cool websites"       class="websites"><s>websites</s></a></li>
+                <li><a href="words"     title="poems and texts and things"          ><s>words</s></a></li>
+                <li><a href="doodles"   title="stuff i drew"                        ><s>doodles</s></a></li>
+                <li><a href="blender"   title="3d renders in blender"               ><s>blender</s></a></li>
+                <li><a href="misc"      title="general miscellanea" class="misc"    ><s>misc</s></a></li>
+                <li><a href="buttons"   title="other folks' sites"  class="buttons" ><s>buttons</s></a></li>
+                <li><a href="sitelog"   title="what's changed"      class="log"     ><s>sitelog</s></a></li>
             </ul>
     </body>
 </html>
