--- a/about.html
+++ b/about.html
@@ -66,9 +66,8 @@
                 (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
                 <br>Regarding gender, i'm non-binary!
                 <span style="color: #303030">█</span><span style="color: #8060f0">█</span><span style="color: #ffffff">█</span><span style="color: #f0e060">█</span>
-                Gender's very weird for me<br>
-                Also my mental health isn't doing very good at the moment :3<br>
-                For contact: <s>discord (@cvni81#4837)</s> (taking a break) or email (cvni1981@gmail.com)</p>
+                Gender's very weird for me<br><br>
+                For contact: discord (@cvni81#4837) or email (cvni1981@gmail.com)</p>
         
         </div>
     </body>
