--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             a.log:hover{background-color: #202020; color: #ffa900}
             a.websites:hover{background-color: #201868; color: #f2cf68}
 
+            h1{margin: 8px 0 16px}
+
             .info{padding: 16px; padding-left: 24px; width: 400px;
             border-right: solid #a0a0a0 2px; margin-right: 12px}
             .summary{padding: 16px 24px; margin-left: 24px; width: 360px; font-size: 2rem}
