--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             a.log:hover{background-color: #202020; color: #ffa900}
             a.websites:hover{background-color: #201868; color: #f2cf68}
 
-            h1{margin: 8px 0 16px}
+            h1{font-size: min(6.5vw, 2.9rem); margin: 8px 0 16px}
 
             .info{padding: 16px; padding-left: 24px; width: 400px;
             border-right: solid #a0a0a0 2px; margin-right: 12px}
