--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">home</a></p>
+            <p><a href="/website/home">back</a></p>
             <ul>
                 <li><b>about</b></li>
                 <li><a href="/website/musicians">musicians</a></li>
@@ -33,7 +33,8 @@
     <h1>about me</h1>
     
         <details class="navbar">
-            <summary><a href="/website/home">home</a></summary>
+            <summary>back</summary>
+            <a href="/website">home</a>
             <b>about</b> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
