--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     
         <details class="navbar">
             <summary>back</summary>
-            <a href="/website">home</a>
+            <a href="/website">home</a><br>
             <b>about</b> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
