--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
             .summary a{text-decoration: none}
 
-            @media only screen and (max-width: 800px) {
-                .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px}
-                .info{padding: 0 16px; margin: 0; width: auto}
+            @media only screen and (max-width: 600px) {
+                .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px;
+                    padding: 0 16px; margin: 0; margin-bottom: 16px; width: auto}
                 .summary{margin-left: 48px; margin-top: 24px; padding: 0; width: auto}
             }
 
@@ -35,9 +35,9 @@
                 <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
                 I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
                 Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it, however small this site may be.<br>
-                <span style="background-color: #ad0b0b; color: #f0e010">This site is under some reconstruction (the pages with strikethrough aren't done yet!), so the styles might change and some pages may be broken over the next days!</span><br>
+                <span style="background-color: #ad0b0b; color: #f0e010">This site is under some reconstruction (the pages with strikethrough aren't done yet!), so the styles might change and some pages may be broken over the next days!</span><br></p>
                 <details><summary style="font-weight: bold">current status</summary>
-                <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
+                <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
             </div>
 
             <ul class="summary">
