--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             @media only screen and (max-width: 600px) {
                 .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px;
-                    padding: 0 16px 16px; margin: 0; width: auto}
+                    padding: 0 16px 10px 16px; margin: 0; width: auto}
                 .summary{margin-left: 48px; margin-top: 24px; padding: 0; width: auto}
             }
 
