--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             .summary a{text-decoration: none}
 
             @media only screen and (max-width: 600px) {
-                .info{border-right: none; border-bottom: solid #a0a0a0 2px; margin-right: 12px;
-                    padding: 0 10px 16px 10px; margin: 0; width: auto}
+                .info{border-right: none; 
+                    padding: 0 10px; margin: 0; width: auto}
+                .info details{border-bottom: solid #a0a0a0 2px; padding-bottom: 16px}
                 .summary{margin-left: 48px; margin-top: 24px; padding: 0; width: auto}
             }
 
