--- a/404.html
+++ b/404.html
@@ -11,9 +11,9 @@
         a:hover{background-color: #f0f0f0; text-decoration-color: #f0f0f0; color: #080808}
         .this-container{
             position: absolute;
-            left: 50%;
-            bottom: 50%;
+            left: 50%; bottom: 50%;
             transform: translate(-50%, 50%);
+            width: 100vw;
             text-align: center;}
 
     </style></head>
