--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <ul class="summary">
-                <li><a href="about"     title="me and what i like to do"            ><s>about</s></a></li>
+                <li><a href="about"     title="me and what i like to do"            >about</a></li>
                 <li><a href="musicians" title="good music people"                   ><s>musicians</s></a></li>
                 <li><a href="websites"  title="cool websites"       class="websites"><s>websites</s></a></li>
                 <li><a href="words"     title="poems and texts and things"          ><s>words</s></a></li>
