--- a/musicians.html
+++ b/musicians.html
@@ -5,15 +5,14 @@
         <title>musicians</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        a.bandcamp, a.bandcampbold{text-decoration-color: #00a2ff;}
-            a.bandcamp:hover, a.bandcampbold:hover{background-color: #00a2ff; color: #404040}
+        a.bandcamp, a.bandcampbold{text-decoration-color: #006BA8;}
+            a.bandcamp:hover, a.bandcampbold:hover{background-color: #006BA8; color: #f0f0f0}
 
-            a.spotify, a.spotifybold{text-decoration-color: #00FF00;}
-            a.spotify:hover, a.spotifybold:hover{background-color: #00FF00; color: #404040}
+            a.spotify, a.spotifybold{text-decoration-color: #008000;}
+            a.spotify:hover, a.spotifybold:hover{background-color: #008000; color: #f0f0f0}
 
             a.bandcamp, a.spotify{font-weight: normal; text-decoration-thickness: 1px;}
             a.bandcampbold, a.spotifybold{font-weight: bold; text-decoration-thickness: 2px}
-            ul{line-height: 1.5}
         </style>
     </head>
 
