--- a/musicians.html
+++ b/musicians.html
@@ -5,10 +5,10 @@
         <title>musicians</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        a.bandcamp, a.bandcampbold{text-decoration-color: #006BA8;}
+        a.bandcamp, a.bandcampbold{color: #006BA8; text-decoration-color: #006BA8;}
             a.bandcamp:hover, a.bandcampbold:hover{background-color: #006BA8; color: #f0f0f0}
 
-            a.spotify, a.spotifybold{text-decoration-color: #008000;}
+            a.spotify, a.spotifybold{color: #008000; text-decoration-color: #008000;}
             a.spotify:hover, a.spotifybold:hover{background-color: #008000; color: #f0f0f0}
 
             a.bandcamp, a.spotify{font-weight: normal; text-decoration-thickness: 1px;}
@@ -19,8 +19,8 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">home</a></p>
-            <ul style="line-height: 1.4">
+            <p><a href="/website/home">back</a></p>
+            <ul>
                 <li><a href="/website/about">about</a></li>
                 <li><b>musicians</b></li>
                 <li><a href="/website/websites">websites</a></li>
@@ -37,7 +37,8 @@
     <h1>favorite musicians</h1>
     
         <details class="navbar">
-            <summary><a href="/website/home">home</a></summary>
+            <summary>back</summary>
+            <a href="home">home</a><br>
             <a href="/website/about">about</a> . 
             <b>musicians</b> . 
             <a href="/website/websites">websites</a><br>
