--- a/websites.html
+++ b/websites.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <title>websites</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style>
     </head>
