--- a/websites.html
+++ b/websites.html
@@ -44,10 +44,10 @@
 
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
         <ul>
-            <a href="websites/math">math and physics (15)</a>
-            <a href="websites/lang">language (5)</a>
-            <a href="websites/geo">geography and flags (4)</a>
-            <a href="websites/misc">miscellaneously interesting (11)</a></ul>
+        <h3>- <a href="websites/math">math and physics (15)</a></h3>
+        <h3>- <a href="websites/lang">language (5)</a></h3>
+        <h3>- <a href="websites/geo">geography and flags (4)</a></h3>
+        <h3>- <a href="websites/misc">miscellaneously interesting (11)</a></h3></ul>
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="mailto:cvni1981@gmail.com">email</a>!</p>
         </div>
