--- a/websites.html
+++ b/websites.html
@@ -49,7 +49,7 @@
         <h3>- <a href="websites/geo">geography and flags (4)</a></h3>
         <h3>- <a href="websites/misc">miscellaneously interesting (11)</a></h3></ul>
 
-        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="mailto:cvni1981@gmail.com">email</a>!</p>
+        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my discord (cvni81#4837) or <a href="mailto:cvni1981@gmail.com">email</a>!</p>
         </div>
     </body>
 </html>
