--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">back</a></p>
+            <p><a href="/website/">home</a></p>
             <ul>
                 <li><b>about</b></li>
                 <li><a href="/website/musicians">musicians</a></li>
@@ -34,7 +34,7 @@
     
         <details class="navbar">
             <summary>back</summary>
-            <a href="/website">home</a><br>
+            <a href="/website/">home</a><br>
             <b>about</b> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
