--- a/musicians.html
+++ b/musicians.html
@@ -19,7 +19,7 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">back</a></p>
+            <p><a href="/website/">home</a></p>
             <ul>
                 <li><a href="/website/about">about</a></li>
                 <li><b>musicians</b></li>
@@ -38,7 +38,7 @@
     
         <details class="navbar">
             <summary>back</summary>
-            <a href="home">home</a><br>
+            <a href="/website/">home</a><br>
             <a href="/website/about">about</a> . 
             <b>musicians</b> . 
             <a href="/website/websites">websites</a><br>
