--- a/websites/lang.html
+++ b/websites/lang.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <title>websites: language</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style>
     </head>
@@ -24,26 +25,27 @@
     <h1>language</h1>
     
         <details class="navbar">
-            <summary><a href="/website/websites">back to websites</a></summary>
+            <summary>back</summary>
+            <a href="/website/websites">websites</a><br>
             <a href="math">math</a> . 
             <b>language</b> . 
             <a href="geo">geography</a> . 
             <a href="misc">misc.</a>
         </details>
 
-        <h2>→ <a href="https://decodeunicode.org/">decodeunicode</a></h2>
+        <h2><a href="https://decodeunicode.org/">decodeunicode</a></h2>
         <p>A site with characters from a TON of languages from all around the world, as encoded by Unicode 11.0 (kinda out of date but still awesome). By Johhannes Bergerhausen and Siri Poarangan.</p>
 
-        <h2>→ <a href="https://www.ethnologue.com/">Ethnologue</a></h2>
+        <h2><a href="https://www.ethnologue.com/">Ethnologue</a></h2>
         <p>A collection of the over 7000 of the world's known languages, kept by the people at SIL International.</p>
 
-        <h2>→ <a href="https://www.merriam-webster.com/time-traveler/">Time Traveller by Merriam-Webster</a></h2>
+        <h2><a href="https://www.merriam-webster.com/time-traveler/">Time Traveller by Merriam-Webster</a></h2>
         <p>A website that shows what words were first used in print for each year.</p>
 
-        <h2>→ <a href="https://ipa.typeit.org/full/">Type IPA phonetic symbols</a></h2>
+        <h2><a href="https://ipa.typeit.org/full/">Type IPA phonetic symbols</a></h2>
         <p>Type with every phonetic symbol in the IPA or choose from a bunch of languages, by Tomasz P. Szynalski.</p>
 
-        <h2>→ <a href="https://arxiv.org/pdf/1012.5962.pdf">Annotated  English</a></h2>
+        <h2><a href="https://arxiv.org/pdf/1012.5962.pdf">Annotated  English</a></h2>
         <p>A paper by José Hernández-Orallo with a way to write English with unambiguous spelling.</p>
         </div>
     </body>
