--- a/websites/misc.html
+++ b/websites/misc.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <title>websites: miscellaneous</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style>
     </head>
@@ -24,44 +25,45 @@
     <h1>miscellaneously interesting</h1>
     
         <details class="navbar">
-            <summary><a href="/website/websites">back to websites</a></summary>
+            <summary>back</summary>
+            <a href="/website/websites">websites</a><br>
             <a href="math">math</a> . 
             <a href="lang">language</a> . 
             <a href="geo">geography</a> . 
             <b>misc.</b>
         </details>
 
-        <h2>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
+        <h2><a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
         <p>A live feed of the lovely sea otters at Monterey Bay Aquarium.</p>
 
-        <h2>→ <a href="https://spacedashboard.com/">Space Dashboard</a></h2>
+        <h2><a href="https://spacedashboard.com/">Space Dashboard</a></h2>
         <p>A live view of space from the ISS. Made by Caleb.</p>
 
-        <h2>→ <a href="https://molview.org/">OneZoom</a></h2>
+        <h2><a href="https://molview.org/">OneZoom</a></h2>
         <p>Zoom through a branching tree of every living species on Earth.</p>
 
-        <h2>→ <a href="https://artsandculture.google.com/">Google Arts & Culture</a></h2>
+        <h2><a href="https://artsandculture.google.com/">Google Arts & Culture</a></h2>
         <p>Browse through thousands of art pieces from many places, times and styles. Basically a giant online museum.</p>
 
-        <h2>→ <a href="https://tasvideos.org/">TASVideos</a></h2>
+        <h2><a href="https://tasvideos.org/">TASVideos</a></h2>
         <p>Look at tons of videogames being played perfectly with the help of tools (Tool-assisted speedrunning).</p>
 
-        <h2>→ <a href="https://molview.org/">MolView</a></h2>
+        <h2><a href="https://molview.org/">MolView</a></h2>
         <p>A site by Herman Bergwerf that lets you build organic molecules and visualize them in 3D!</p>
 
-        <h2>→ <a href="https://michaelbach.de/ot/">Optical Illusions & Visual Phenomena</a></h2>
+        <h2><a href="https://michaelbach.de/ot/">Optical Illusions & Visual Phenomena</a></h2>
         <p>A collection by Michael Bach with 148 fun optical illusions and explanations where possible. <b>Please don't go here if you are sensitive to fast movement and flashing images and stuff.</b></p>
 
-        <h2>→ <a href="https://standardsmanual.com/">Standards Manual</a></h2>
+        <h2><a href="https://standardsmanual.com/">Standards Manual</a></h2>
         <p>Reprints of old graphics standards manuals and other cool design things. By Jesse Reed and Hamish Smyth.</p>
 
-        <h2>→ <a href="https://625.uk.com/">Andrew Wiseman's Television Room</a></h2>
+        <h2><a href="https://625.uk.com/">Andrew Wiseman's Television Room</a></h2>
         <p>A site full of stuff about british TV, including logo histories, recreated idents and clocks as well as other stuff.</p>
 
-        <h2>→ <a href="https://dood.al/pinktrombone/">Pink Trombone</a></h2>
+        <h2><a href="https://dood.al/pinktrombone/">Pink Trombone</a></h2>
         <p>Make a voice speak by moving the cursor around. By Neil Thapen.</p>
 
-        <h2>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></h2>
+        <h2><a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></h2>
         <p>A wiki dedicated to collecting closing production logos and TV ID's from around the world.</p>
         </div>
     </body>
