--- a/websites/misc.html
+++ b/websites/misc.html
@@ -33,6 +33,9 @@
             <b>misc.</b>
         </details>
 
+        <h2><a href="https://noclip.website">noclip.website</a></h2>
+        <p>An online digital museum of 3d interactive maps from a bunch of videogames! Made by <a href="https://twitter.com/JasperRLZ">Jasper</a> and open-source on <a href="https://github.com/magcius/noclip.website">Github!</a></p>
+
         <h2><a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
         <p>A live feed of the lovely sea otters at Monterey Bay Aquarium.</p>
 
