--- a/words.html
+++ b/words.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         summary{font-size: 1.25rem}
         ul{margin-top:0px}
-        .small{font-weight: normal; text-decoration-thickness: 1px}
         details{margin: 10px 0}
         </style>
     </head>
@@ -33,7 +32,8 @@
     <h1>words</h1>
     
         <details class="navbar">
-            <summary><a href="/website/home">home</a></summary>
+            <summary>back</summary>
+            <a href="/website/">home</a><br>
             <a href="/website/about">about</a> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
@@ -53,9 +53,7 @@
             also i don't write very frequently.</p>
             </details>
 
-        <a href="words/nothing" style="margin-top: 0px">blog (?)</a><br>
         <a href="words/diary.html">diary</a><br>
-        <a href="words/blips.html">blips</a> (non-mobile friendly)
 
         <details><summary><a>poems</a></summary>
         <ul>
